:sparkles: Results import API route
